Huawei port type hints logic should consider generic udev tags
On a device with GETPORTMODE explicitly disabled, and which exposes 2 interfaces like these, we're flagging both as PPP wrongly:
USB if#0 ---> ttyUSB0 ---> ff/2/18 ---> PPP
USB if#1 ---> ttyUSB1 ---> ff/2/1 ---> PPP
The reason for ttyUSB1 flagged as PPP is legit, that is ok, because ff/2/1 implies being a data port. This flag is taken from udev rules.
The reason for ttyUSB0 flagged as PPP is not right, in this case the flag is added due to this code:
/* If GETPORTMODE unsupported and no other port type hints, we assume
* usbif 0 is the modem port */
if (usbif == 0) {
at_port_flags = MM_PORT_SERIAL_AT_FLAG_PPP;
goto next;
}
We're wrongly assuming that there are no other port type hints, because the hints are coming from udev ports in the generic plugin code, not from huawei-specific port type hint logic.